--- a/fe/index.html
+++ b/fe/index.html
@@ -16,7 +16,7 @@
         }
         .chat-container {
             width: 100%;
-            max-width: 400px;
+            max-width: 800px; /* Increased from 400px to 800px */
             background: white;
             border-radius: 10px;
             padding: 15px;
@@ -92,6 +92,10 @@
             pointer-events: none;
             opacity: 0.5;
         }
+        .selected-conversation {
+            background-color: #495057;
+            color: white;
+        }
     </style>
 </head>
 <body>
@@ -100,7 +104,7 @@
         <div class="sidebar">
             <h5>Conversations</h5>
             <button class="btn btn-primary w-100 mb-2" @click="createConversation" :disabled="!selectedUser">+</button>
-            <div v-for="conversation in conversations" :key="conversation.id" class="conversation-item" @click="selectedUser ? selectConversation(conversation) : null" :class="{ 'disabled': !selectedUser }">
+            <div v-for="conversation in conversations" :key="conversation.id" class="conversation-item" @click="selectConversation(conversation)" :class="{ 'disabled': !selectedUser, 'selected-conversation': selectedConversation && selectedConversation.id === conversation.id }">
                 {{ conversation.title }}
             </div>
             <div class="user-select mt-auto">
@@ -127,21 +131,17 @@
             </div>
 
             <div class="d-flex gap-2 mt-2">
-                <button class="btn btn-outline-secondary" @click="pickFile" :disabled="!selectedUser || !isConnected">+</button>
+                <button class="btn btn-outline-secondary" @click="pickFile" :disabled="!selectedUser || !selectedConversation">+</button>
                 <input type="file" id="fileInput" ref="fileInput" accept="image/*,audio/*,video/*" @change="sendFile">
-                <input type="text" v-model="message" class="form-control" placeholder="Type a message..." :disabled="!selectedUser || !isConnected" @keyup.enter="sendMessage">
-                <button class="btn btn-primary" @click="sendMessage" :disabled="!selectedUser || !isConnected || !message.trim()">Send</button>
+                <input type="text" v-model="message" class="form-control" placeholder="Type a message..." :disabled="!(selectedUser && selectedConversation)" @keyup.enter="sendMessage">
+                <button class="btn btn-primary" @click="sendMessage" :disabled="!selectedUser || !selectedConversation || !message.trim()">Send</button>
             </div>
-
-            <button class="btn w-100 mt-2" :class="isConnected ? 'btn-danger' : 'btn-success'" @click="toggleConnection">
-                {{ isConnected ? 'Disconnect' : 'Connect' }}
-            </button>
         </div>
     </div>
 </div>
 
 <script>
-  const { createApp, ref, onMounted, onBeforeUnmount } = Vue;
+  const { createApp, ref, onMounted, onBeforeUnmount, watch } = Vue;
 
   createApp({
     setup() {
@@ -155,14 +155,12 @@
       const users = ref([]);
       const selectedUser = ref(null);
       const conversations = ref([]);
-      const selectedConversation = ref(null);
+      const selectedConversation = ref(null); // Define selectedConversation
 
-      const connect = async () => {
+      const connect = () => {
         if (isConnected.value || isConnecting.value) return;
-        if (!selectedConversation.value) {
-            await createConversation(); // Ensure a conversation exists
-        }
-        if (!selectedConversation.value) return; // Exit if conversation creation fails
+        if (!selectedConversation.value) return;
+
         isConnecting.value = true;
         const convId = selectedConversation.value.id;
         ws.value = new WebSocket(`ws://localhost:8000/api/chat?conversation_id=${convId}`);
@@ -184,7 +182,6 @@
           isConnected.value = false;
           ws.value = null;
           isConnecting.value = false;
-          setTimeout(connect, 3000); // Auto-reconnect
         };
 
         ws.value.onerror = () => {
@@ -192,19 +189,60 @@
         };
       };
 
-      const disconnect = () => {
-        if (ws.value) ws.value.close();
-      };
-
-      const toggleConnection = () => {
-        isConnected.value ? disconnect() : connect();
-      };
-
       const sendMessage = () => {
-        if (!isConnected.value || !message.value.trim()) return;
-        ws.value.send(message.value);
-        addMessage(message.value, "user-message");
-        message.value = "";
+        if (!selectedConversation.value) return;
+
+        if (!isConnected.value && !isConnecting.value) {
+          connect();
+          const checkConnection = setInterval(() => {
+            if (isConnected.value) {
+              clearInterval(checkConnection);
+              if (message.value.trim()) {
+                ws.value.send(message.value);
+                addMessage(message.value, "user-message");
+                message.value = "";
+              }
+            }
+          }, 100);
+        } else if (isConnected.value && message.value.trim()) {
+          ws.value.send(message.value);
+          addMessage(message.value, "user-message");
+          message.value = "";
+        }
+      };
+
+      const disconnectWebSocket = () => {
+        if (ws.value) {
+          ws.value.close();
+          ws.value = null;
+          isConnected.value = false;
+        }
+      };
+
+      const selectConversation = (conversation) => {
+        disconnectWebSocket();
+        selectedConversation.value = conversation;
+        message.value = ""; // Clear message input
+        fetchUserMessages(); // Load messages for the selected conversation
+      };
+
+      const createConversation = async () => {
+        if (!selectedUser.value) return;
+
+        try {
+          const response = await fetch('http://localhost:8000/api/conversation', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ user_id: selectedUser.value, title: 'New Conversation' })
+          });
+
+          if (!response.ok) throw new Error('Failed to create conversation');
+
+          await fetchConversations(); // Refresh the conversation list
+          disconnectWebSocket();
+        } catch (error) {
+          console.error('Error creating conversation:', error);
+        }
       };
 
       const sendFile = () => {
@@ -235,8 +273,16 @@
         fileInput.value.value = "";
       };
 
-      const addMessage = (content, type) => {
-        messages.value.push({ id: Date.now(), content, type });
+      const addMessage = (content, type, messageType = 'text', filePath = null) => {
+        let messageContent = content;
+        if (messageType === 'image') {
+          messageContent = `<img src="${filePath}" style="max-width: 100px; border-radius: 5px;">`;
+        } else if (messageType === 'audio') {
+          messageContent = `<audio controls src="${filePath}"></audio>`;
+        } else if (messageType === 'video') {
+          messageContent = `<video controls width="150"><source src="${filePath}"></video>`;
+        }
+        messages.value.push({ id: Date.now(), content: messageContent, type });
         setTimeout(() => {
           if (messageBox.value) {
             messageBox.value.scrollTop = messageBox.value.scrollHeight;
@@ -265,61 +311,49 @@
         }
       };
 
-      const selectConversation = (conversation) => {
-        selectedConversation.value = conversation;
-        fetchUserMessages();
-      };
-
       const fetchUserMessages = async () => {
         if (!selectedUser.value || !selectedConversation.value) return;
         try {
-            const response = await fetch(`http://localhost:8000/api/message?conversation_id=${selectedConversation.value.id}&page=1&page_size=10`);
-            const data = await response.json();
-            if (data.data) {
-                messages.value = data.data.map(msg => ({
-                    id: msg.id,
-                    content: msg.content,
-                    type: msg.sender === selectedUser.value ? 'user-message' : 'server-message'
-                }));
-            } else {
-                messages.value = [];
-            }
-            await fetchConversations(); // Reload conversations when user is reselected
-        } catch (error) {
-            console.error('Error fetching user messages:', error);
-        }
-      };
-
-      const createConversation = async () => {
-        if (!selectedUser.value) return;
-
-        try {
-            const response = await fetch('http://localhost:8000/api/conversation', {
-                method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
-                body: JSON.stringify({ user_id: selectedUser.value, title: 'New Conversation' })
+          const response = await fetch(`http://localhost:8000/api/message?conversation_id=${selectedConversation.value.id}&page=1&page_size=10`);
+          const data = await response.json();
+          if (data.data) {
+            messages.value = []; // Clear existing messages
+            data.data.forEach(msg => {
+              addMessage(msg.content, msg.role === 'user' ? 'user-message' : 'server-message', msg.message_type, msg.file_path);
             });
-
-            if (!response.ok) throw new Error('Failed to create conversation');
-
-            await fetchConversations(); // Refresh the conversation list
+          } else {
+            messages.value = [];
+          }
+          await fetchConversations(); // Reload conversations when user is reselected
         } catch (error) {
-            console.error('Error creating conversation:', error);
+          console.error('Error fetching user messages:', error);
         }
       };
 
       onMounted(() => {
-        connect();
         fetchUsers();
       });
 
-      onBeforeUnmount(disconnect);
+      onBeforeUnmount(() => {
+        disconnectWebSocket();
+      });
+
+      watch(selectedUser, (newUser, oldUser) => {
+        if (newUser !== oldUser) {
+          disconnectWebSocket();
+          selectedConversation.value = null; // Clear selected conversation
+          messages.value = []; // Clear chatbox content
+          fetchConversations();
+          fetchUserMessages();
+        }
+      });
 
       return {
-        messages, message, isConnected, isConnecting, toggleConnection, sendMessage, sendFile, fileInput, messageBox, users, selectedUser, fetchUserMessages, pickFile: () => fileInput.value.click(), conversations, fetchConversations, selectConversation, createConversation
+        messages, message, isConnected, isConnecting, sendMessage, sendFile, fileInput, messageBox, users, selectedUser, fetchUserMessages, pickFile: () => fileInput.value.click(), conversations, fetchConversations, selectConversation, createConversation, selectedConversation // Add selectedConversation to the returned properties
       };
     }
   }).mount("#app");
 </script>
 </body>
 </html>
+`
