--- a/fe/index.html
+++ b/fe/index.html
@@ -96,6 +96,11 @@
             background-color: #495057;
             color: white;
         }
+        .edit-title {
+            cursor: pointer;
+            color: #007bff;
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
@@ -116,8 +121,12 @@
         </div>
         <div class="chat-container">
             <div class="d-flex justify-content-between align-items-center mb-2">
-                <h4 class="mb-0">Vue WebSocket Chat</h4>
+                <h4 class="mb-0">WebSocket Chat</h4>
                 <a href="admin.html" class="nav-link text-primary">Admin Panel</a>
+            </div>
+            <div class="d-flex justify-content-between align-items-center mb-2">
+                <h5 class="mb-0">{{ selectedConversation ? selectedConversation.title : 'Select a conversation' }}</h5>
+                <span v-if="selectedConversation" class="edit-title" @click="editTitle">Edit Title</span>
             </div>
             <div class="alert text-center p-2 d-flex align-items-center justify-content-center" :class="isConnected ? 'alert-success' : 'alert-danger'">
                 <span>Status: {{ isConnected ? 'Connected' : 'Disconnected' }}</span>
@@ -330,6 +339,29 @@
         }
       };
 
+      const editTitle = async () => {
+        if (!selectedConversation.value) return;
+
+        const newTitle = prompt("Enter new title:", selectedConversation.value.title);
+        if (newTitle && newTitle !== selectedConversation.value.title) {
+          try {
+            const response = await fetch(`http://localhost:8000/api/conversation/${selectedConversation.value.id}`, {
+              method: 'PUT',
+              headers: { 'Content-Type': 'application/json' },
+              body: JSON.stringify({ title: newTitle })
+            });
+
+            if (!response.ok) throw new Error('Failed to update conversation title');
+
+            const data = await response.json();
+            selectedConversation.value.title = data.title;
+            await fetchConversations(); // Refresh the conversation list
+          } catch (error) {
+            console.error('Error updating conversation title:', error);
+          }
+        }
+      };
+
       onMounted(() => {
         fetchUsers();
       });
@@ -349,11 +381,10 @@
       });
 
       return {
-        messages, message, isConnected, isConnecting, sendMessage, sendFile, fileInput, messageBox, users, selectedUser, fetchUserMessages, pickFile: () => fileInput.value.click(), conversations, fetchConversations, selectConversation, createConversation, selectedConversation // Add selectedConversation to the returned properties
+        messages, message, isConnected, isConnecting, sendMessage, sendFile, fileInput, messageBox, users, selectedUser, fetchUserMessages, pickFile: () => fileInput.value.click(), conversations, fetchConversations, selectConversation, createConversation, selectedConversation, editTitle // Add selectedConversation and editTitle to the returned properties
       };
     }
   }).mount("#app");
 </script>
 </body>
 </html>
-`
